objects/Net_Promoter_Measurement__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Answers__c</fullName>
        <label>Additional Answers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Net Promoter Measurements</relationshipLabel>
        <relationshipName>Net_Promoter_Measurements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delighted_Id__c</fullName>
        <label>Delighted Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Net Promoter Measurements</relationshipLabel>
        <relationshipName>Net_Promoter_Measurements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Net Promoter Measurements</relationshipLabel>
        <relationshipName>Net_Promoter_Measurements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permalink__c</fullName>
        <label>Permalink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <label>Survey Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Net Promoter Measurement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Delighted_Id__c</columns>
        <columns>NAME</columns>
        <columns>Score__c</columns>
        <columns>Additional_Answers__c</columns>
        <columns>Comment__c</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Permalink__c</columns>
        <columns>Survey_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NPM-{0000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Net Promoter Measurements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>